#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-03-08
2015-12-03 Mikhail S. Dubrovin
- add Igor's script app/find_runs_for_data_type
- add data/copy_part_of_xtc_file.cfg
- DetectorAccess - fix memory leak issue (PSAS-139)
	
Tag: V00-03-07
2015-11-17 Mikhail S. Dubrovin
- update documentation for AreaDetector, WFDetector, PyDetector
	
Tag: V00-03-06
2015-11-16 Mikhail S. Dubrovin
- PyDetector - restore and update documentation for sphinx, restore optional test, which were deleted/broken in rev.10938

Tag: V00-03-05
2015-11-13 yoon82 - did something in rev.10977 but did not leave any comments here (M.D.)
	- actually in PyDetector.py portion of code is moved in methods isAreaDetector, isEvrDetector, isWFDetector

Tag: V00-03-04
2015-11-11 Christopher O'Grady
Update detector_factory documentation with Mikhail suggestions.

Tag: V00-03-03
2015-11-11 Mikhail S. Dubrovin
- Update examples/ex_nda_average.py - evaluate maximal along with average

Tag: V00-03-02
2015-11-09 Christopher O'Grady
Update detector_factory documentation.  Clean up GlobalUtils
(alot of this code was moved to PSCalib).

Tag: V00-03-01
2015-11-09 Christopher O'Grady
Make remaining python in examples/ directory work.

Tag: V00-03-00
2015-11-09 TJ Lane
- PyDetector.py: detector_factory() functional, chooses correct PyDetector
from string
- New detectors: DdlDetector.py, EvrDetector.py, EpicsDetector.py and the Bld
(uses DdlDetector)
- No longer accept psana.Source in calls to psana.Detector (v00-03)

Tag: V00-02-05
2015-10-29 Mikhail S. Dubrovin
- AreaDetector.py and PyDetectorAccess.py - in methods indexes_x/y(...) and image(...) add parameter do_update=False (PSAS-139)
