@@ -1,0 +1,16 @@
+#------------------------------ 
+# Example: psana -c Detector/data/copy_part_of_xtc_file.cfg -s 0 -n 10 exp=xcsi0314:run=213
+#------------------------------ 
+
+[psana]
+files = exp=xcsi0314:run=213
+skip-events = 0
+events = 10
+ 
+modules = PSXtcOutput.XtcOutputModule 
+ 
+[PSXtcOutput.XtcOutputModule]
+dirName  = ./
+#dirName  = /reg/g/psdm/data_test/Translator/
+
+#------------------------------ 
